metadata/force-app/main/default/objects/CustomName_jXBMM__c/CustomName_jXBMM__c.object-meta.xml
<CustomObject>
    <description>Description_RXTsR</description>
    <label>CustomLabel_qfJRR</label>
    <nameField>
        <label>CustomLabel_qfJRR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qfJRRs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>