metadata/force-app/main/default/objects/CustomName_jXBMM__c/fields/CustomField_cvQJY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_cvQJY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFpgME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>